# star_wars_watchlist

./: .gitignore  Makefile  README.md  canon_media.json  db.py  main.py  media_table.html  models.py  pyproject.toml  scrape_canon_media.py  scrape_episode_urls.py
.github/: copilot-instructions.md
