[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "star-wars-watchlist"
version = "0.1.0"
description = "A FastAPI-based Star Wars canon media watchlist app."
authors = ["Danny Makin <dpmakin@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

    [tool.poetry.dependencies]
    python = ">=3.13"
    fastapi = { version = ">=0.116.1,<0.117.0", extras = ["all"] }
    uvicorn = ">=0.35.0,<0.36.0"
    requests = ">=2.32.4,<3.0.0"
    beautifulsoup4 = ">=4.13.4,<5.0.0"
    python-multipart = ">=0.0.20,<0.0.21"
    aiosqlite = ">=0.21.0,<0.22.0"
    greenlet = "^3.2.3"
    aiohttp = "^3.12.15"
